--- a/HuaShanApp/app/src/main/res/layout/layout_commodity_item.xml
+++ b/HuaShanApp/app/src/main/res/layout/layout_commodity_item.xml
@@ -1,19 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="200dp"
     android:layout_height="match_parent"
     android:gravity="center">
-    <TextView
 
-        android:id="@+id/tv_item"
+    <android.support.percent.PercentFrameLayout
+        android:id="@+id/item_pl"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:gravity="center"
-
-        android:text="name"
-        android:background="#caf"
         android:textColor="#fff">
+        <TextView
+            android:id="@+id/tv_item_name"
+            android:layout_width="match_parent"
+            app:layout_heightPercent="50%"
+            android:layout_gravity="top"
+            android:gravity="bottom|center_horizontal"
+            android:text="name"
 
-    </TextView>
+            >
+
+        </TextView>
+
+        <TextView
+            android:id="@+id/tv_item_content"
+            android:layout_width="match_parent"
+            app:layout_heightPercent="50%"
+            android:layout_gravity="bottom"
+            android:gravity="top|center_horizontal"
+            android:text="content"
+            >
+
+        </TextView>
+    </android.support.percent.PercentFrameLayout>
+
 </LinearLayout>
