--- a/HuaShanApp/app/src/main/res/values/dimens.xml
+++ b/HuaShanApp/app/src/main/res/values/dimens.xml
@@ -49,4 +49,6 @@
     <dimen name="todayfragment_part3_text_size">13dp</dimen>
 
     <dimen name="todayfragment_part4_text_size">15dp</dimen>
+    
+    <dimen name="todayfragment_new_text_size_1">12dp</dimen>
 </resources>
