--- a/HuaShanApp/app/src/main/res/layout/fragment_manage.xml
+++ b/HuaShanApp/app/src/main/res/layout/fragment_manage.xml
@@ -19,7 +19,7 @@
                     android:id="@+id/title_ll"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:background="@color/title_color"
+                    android:background="#fff"
                     android:gravity="center_vertical"
                     android:orientation="horizontal"
                     app:layout_heightPercent="8%"
@@ -40,18 +40,19 @@
                 />
 
                 </android.support.percent.PercentRelativeLayout>
-                <TextView
-                    android:id="@+id/title_text"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:gravity="center"
-                    android:text="理财"
-                    android:textColor="#fff"
-                    android:textSize="@dimen/title_text_size"
-                    />
 
-                <android.support.percent.PercentRelativeLayout
+                    <TextView
+                        android:id="@+id/title_text"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:gravity="center"
+                        android:text="理财"
+                        android:textColor="@color/title_text_color"
+                        android:textSize="@dimen/title_text_size"
+                        />
+
+                    <android.support.percent.PercentRelativeLayout
                     android:id="@+id/add_btn"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
@@ -75,6 +76,7 @@
                     android:background="@color/all_activity_background"
 
                     >
+
 
                         <android.support.v7.widget.RecyclerView
                             android:id="@+id/manage_titlebar_rl"
@@ -103,7 +105,11 @@
 
 
 
-
+                    <ImageView
+                        android:layout_width="match_parent"
+                        android:layout_height="1dp"
+                        android:background="@color/line_color"
+                        android:layout_gravity="top"/>
 
                 </android.support.percent.PercentFrameLayout>
             </android.support.percent.PercentRelativeLayout>
