--- a/HuaShanApp/app/src/main/res/layout/layout_experience_content_item.xml
+++ b/HuaShanApp/app/src/main/res/layout/layout_experience_content_item.xml
@@ -27,7 +27,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
                 app:layout_marginLeftPercent="5%"
-                android:text="产融贷 - CR216002-30"
+                android:text="体验标"
                 android:textSize="15dp"/>
 
             <ImageView
@@ -54,38 +54,29 @@
             app:layout_marginTopPercent="25%"
             >
 
+
+            <TextView
+                android:id="@+id/tv_3_2"
+                app:layout_widthPercent="35%"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom|right"
+                app:layout_marginRightPercent="15%"
+                android:gravity="center"
+                android:text="6月"
+                android:textSize="@dimen/manage_content_item_text_size"/>
+
             <TextView
                 android:id="@+id/tv_1_2"
-                app:layout_widthPercent="30%"
+                app:layout_widthPercent="35%"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="bottom"
                 android:gravity="center"
-                app:layout_marginLeftPercent="5%"
+                app:layout_marginLeftPercent="15%"
                 android:text="8.60%"
                 android:textSize="@dimen/manage_content_item_text_size"
                 android:textColor="#ff8000"/>
-
-            <TextView
-                android:id="@+id/tv_2_2"
-                app:layout_widthPercent="30%"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="bottom|center_horizontal"
-                android:gravity="center"
-                android:text="20万元"
-                android:textSize="@dimen/manage_content_item_text_size"/>
-
-            <TextView
-                android:id="@+id/tv_3_2"
-                app:layout_widthPercent="30%"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="bottom|right"
-                app:layout_marginRightPercent="5%"
-                android:gravity="center"
-                android:text="6月"
-                android:textSize="@dimen/manage_content_item_text_size"/>
 
         </android.support.percent.PercentFrameLayout>
 
@@ -96,29 +87,23 @@
             >
 
             <TextView
-                app:layout_widthPercent="30%"
+                app:layout_widthPercent="35%"
                 android:layout_height="wrap_content"
                 android:layout_gravity="bottom"
                 android:gravity="center"
-                app:layout_marginLeftPercent="5%"
+                app:layout_marginLeftPercent="15%"
                 android:text="预期年化收益"
                 android:textSize="12dp"
                 />
 
-            <TextView
-                app:layout_widthPercent="30%"
-                android:layout_height="wrap_content"
-                android:layout_gravity="bottom|center_horizontal"
-                android:gravity="center"
-                android:text="剩余金额"
-                android:textSize="12dp" />
+
 
             <TextView
-                app:layout_widthPercent="30%"
+                app:layout_widthPercent="35%"
                 android:layout_height="wrap_content"
                 android:layout_gravity="bottom|right"
                 android:gravity="center"
-                app:layout_marginRightPercent="5%"
+                app:layout_marginRightPercent="15%"
                 android:text="理财期限"
                 android:textSize="12dp" />
 
@@ -134,7 +119,7 @@
             app:layout_marginBottomPercent="5%"
             android:background="@drawable/bg_fillet_0894ec_5dp"
             android:gravity="center"
-            android:text="立即购买"
+            android:text="立即体验"
             android:textColor="#fff"
 
             />
@@ -142,3 +127,4 @@
     </android.support.percent.PercentFrameLayout>
 
 </android.support.v7.widget.CardView>
+
