--- a/HuaShanApp/app/src/main/res/values/colors.xml
+++ b/HuaShanApp/app/src/main/res/values/colors.xml
@@ -10,6 +10,7 @@
     <color name="line_color">#20000000</color>
 
     <color name="title_color">#0894EC</color>
+    <color name="title_text_color">#8e8e8e</color>
 
     <!--homeactivity-->
     <color name="homeactivity_textcolor_selected">#0894EC</color>
