--- a/HuaShanApp/utils/src/main/res/values/attrs.xml
+++ b/HuaShanApp/utils/src/main/res/values/attrs.xml
@@ -8,4 +8,8 @@
     </declare-styleable>
 
     <attr name="indicatorDefStyleAttr" format="reference"/>
+
+    <declare-styleable name="MyViewPager">
+        <attr name="isVertical" format="boolean" />
+    </declare-styleable>
 </resources>
