--- a/HuaShanApp/app/src/main/res/layout/activity_investment_details.xml
+++ b/HuaShanApp/app/src/main/res/layout/activity_investment_details.xml
@@ -78,52 +78,97 @@
 
             >
 
-            <ImageView
+            <!--123-->
+            <android.support.percent.PercentFrameLayout
                 android:id="@+id/tab_det"
                 android:layout_width="match_parent"
                 app:layout_heightPercent="10%"
                 app:layout_marginTopPercent="24%"
-                android:background="#cfa"/>
+                android:background="#fff"
+                android:orientation="horizontal">
 
-            <ImageView
-                android:id="@+id/img_ll"
-                android:layout_width="match_parent"
-                app:layout_heightPercent="13%"
+                <ImageView
+                    android:layout_width="match_parent"
+                    app:layout_heightPercent="10%"
+                    android:background="#ffa042"/>
 
-                android:src="@drawable/move"
-                android:layout_gravity="bottom"
-                app:layout_marginBottomPercent="10%"
-                />
+                <TextView
+                    android:id="@+id/bt_det_1"
+                    android:layout_width="wrap_content"
+                    android:layout_weight="1"
+                    app:layout_widthPercent="33.4%"
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:text="项目信息"
+                    android:onClick="@{handler.onInformation}"
+                    />
 
+                <TextView
+                    android:id="@+id/bt_det_2"
+                    android:layout_width="wrap_content"
+                    android:layout_weight="1"
+                    app:layout_widthPercent="33.4%"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="center_horizontal"
+                    android:gravity="center"
+                    android:text="购买记录"
+                    android:background="#f0f0f0"
+                    android:onClick="@{handler.onRecord}"/>
+
+                <TextView
+                    android:id="@+id/bt_det_3"
+                    android:layout_width="wrap_content"
+                    android:layout_weight="1"
+                    app:layout_widthPercent="33.4%"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="right"
+                    android:gravity="center"
+                    android:text="项目进度"
+                    android:background="#f0f0f0"
+                    android:onClick="@{handler.onSpeed}"/>
+
+
+
+            </android.support.percent.PercentFrameLayout>
 
             <!--第1部分-->
 
 
-            <android.support.percent.PercentFrameLayout
+            <android.support.percent.PercentRelativeLayout
                 android:id="@+id/header_2"
                 android:layout_width="match_parent"
                 app:layout_heightPercent="5%"
                 app:layout_marginTopPercent="29%"
-                android:background="#66b3ff">
+                android:background="#66b3ff"
+                android:clickable="true">
+
+                <ImageView
+                    app:layout_widthPercent="8%"
+                    app:layout_heightPercent="60%"
+                    android:layout_toLeftOf="@+id/release_time"
+                    android:layout_centerVertical="true"
+                    android:src="@drawable/release_time"/>
 
                 <TextView
+                    android:id="@+id/release_time"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:gravity="center"
+                    android:layout_centerInParent="true"
                     android:text="发布日期：2016-11-09 00:05"
                     android:textColor="#fff"/>
 
-            </android.support.percent.PercentFrameLayout>
+            </android.support.percent.PercentRelativeLayout>
 
 
                 <android.support.percent.PercentFrameLayout
                     android:id="@+id/header"
-                    android:layout_width="match_parent"
+                    android:layout_width="380dp"
                     app:layout_heightPercent="25%"
                     app:layout_marginTopPercent="5%"
                     android:background="#66b3ff"
-                    >
+                    android:clickable="true"
+                    android:layout_height="116dp">
                     <TextView
                         android:id="@+id/text_11"
                         android:layout_width="wrap_content"
@@ -167,143 +212,7 @@
 
             </android.support.percent.PercentFrameLayout>
 
-            <!--第2部分-->
 
-            <android.support.percent.PercentFrameLayout
-                android:layout_width="match_parent"
-                app:layout_heightPercent="15%"
-                app:layout_marginTopPercent="34%"
-                android:background="#fff">
-
-                <TextView
-                    app:layout_widthPercent="50%"
-                    app:layout_heightPercent="40%"
-                    android:gravity="center|bottom"
-                    android:text="起购金额(元)"/>
-
-                <TextView
-                    app:layout_widthPercent="50%"
-                    app:layout_heightPercent="40%"
-                    android:layout_gravity="right"
-                    android:gravity="center|bottom"
-                    android:text="投资期限(月)"/>
-
-
-                <TextView
-                    android:id="@+id/det_playenough"
-                    app:layout_widthPercent="50%"
-                    app:layout_heightPercent="55%"
-                    android:layout_gravity="bottom"
-                    android:gravity="center_horizontal"
-                    android:text="100.00"
-                    android:textSize="25dp"/>
-
-                <TextView
-                    android:id="@+id/det_time"
-                    app:layout_widthPercent="50%"
-                    app:layout_heightPercent="55%"
-                    android:layout_gravity="right|bottom"
-                    android:gravity="center_horizontal"
-                    android:text="6"
-                    android:textSize="25dp"/>
-
-            </android.support.percent.PercentFrameLayout>
-
-
-            <!--第3部分-->
-            <android.support.percent.PercentFrameLayout
-                android:layout_width="match_parent"
-                app:layout_heightPercent="18%"
-                app:layout_marginTopPercent="49%"
-                >
-
-                <android.support.percent.PercentFrameLayout
-                    app:layout_widthPercent="20%"
-                    app:layout_heightPercent="80%"
-                    app:layout_marginLeftPercent="15%"
-                    android:layout_below="@+id/colorChoice"
-                    android:layout_gravity="center_vertical"
-                    android:background="#5066b3ff">
-
-                    <com.gelitenight.waveview.library.WaveView
-                        android:id="@+id/wave_in"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        />
-
-
-
-                    <ImageView
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:background="@drawable/qwe"/>
-
-                    <TextView
-                        android:id="@+id/ww_text"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="bottom"
-                        app:layout_marginBottomPercent="15%"
-                        android:gravity="center"
-                        android:text="100%"
-                        android:textColor="#7b7b7b"
-                        android:textSize="10dp"/>
-
-
-                </android.support.percent.PercentFrameLayout>
-
-                <android.support.percent.PercentFrameLayout
-                    app:layout_widthPercent="60%"
-                    android:layout_height="match_parent"
-                    android:layout_gravity="right">
-
-                    <TextView
-                        android:id="@+id/det_money"
-                        android:layout_width="match_parent"
-                        app:layout_heightPercent="49%"
-                        android:gravity="center_horizontal|bottom"
-                        android:text="200,000.00/1,000,000.00"
-                        android:textSize="17dp"
-                        android:textColor="#ff8000"
-                        />
-
-
-                    <TextView
-                        android:layout_width="match_parent"
-                        app:layout_heightPercent="49%"
-                        android:layout_gravity="bottom"
-                        android:gravity="center_horizontal"
-                        android:text="剩余可投（元）/融资金额（元）"
-                        android:textSize="12dp"
-                        />
-
-                </android.support.percent.PercentFrameLayout>
-
-            </android.support.percent.PercentFrameLayout>
-
-
-            <!--第3部分-->
-            <android.support.percent.PercentFrameLayout
-                android:layout_width="match_parent"
-                app:layout_heightPercent="10%"
-                app:layout_marginTopPercent="67%"
-                android:background="#fff"
-                >
-
-                <TextView
-                    app:layout_widthPercent="40%"
-                    android:layout_height="match_parent"
-                    android:gravity="center"
-                    android:text="回款方式"/>
-
-                <TextView
-                    app:layout_widthPercent="60%"
-                    android:layout_height="match_parent"
-                    android:layout_gravity="right"
-                    android:gravity="center"
-                    android:text="每月付息   到期还本"/>
-
-            </android.support.percent.PercentFrameLayout>
 
             <android.support.percent.PercentFrameLayout
                 android:layout_width="match_parent"
@@ -314,7 +223,8 @@
                 <com.example.utils.custom.VerticalViewPager.VerticalViewPager
                     android:id="@+id/viewpager_ve"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent">
+                    android:layout_height="match_parent"
+                    android:background="#fff">
 
 
                 </com.example.utils.custom.VerticalViewPager.VerticalViewPager>
