--- a/HuaShanApp/app/src/main/res/layout/fragment_details_1.xml
+++ b/HuaShanApp/app/src/main/res/layout/fragment_details_1.xml
@@ -66,19 +66,169 @@
         <!--</LinearLayout>-->
 
         <android.support.percent.PercentFrameLayout
+            android:id="@+id/content_pl"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_below="@+id/title_ll"
             app:layout_heightPercent="100%"
-            android:background="#fff"
+            android:background="@color/all_activity_background"
 
             >
 
 
-            <TextView
-                android:layout_width="wrap_content"
+            <!--第2部分-->
+
+            <android.support.percent.PercentFrameLayout
+                android:layout_width="match_parent"
+                app:layout_heightPercent="25%"
+                android:background="#fff">
+
+                <TextView
+                    app:layout_widthPercent="50%"
+                    app:layout_heightPercent="40%"
+                    android:gravity="center|bottom"
+                    android:text="起购金额(元)"/>
+
+                <TextView
+                    app:layout_widthPercent="50%"
+                    app:layout_heightPercent="40%"
+                    android:layout_gravity="right"
+                    android:gravity="center|bottom"
+                    android:text="投资期限(月)"/>
+
+
+                <TextView
+                    android:id="@+id/det_playenough"
+                    app:layout_widthPercent="50%"
+                    app:layout_heightPercent="55%"
+                    android:layout_gravity="bottom"
+                    android:gravity="center_horizontal"
+                    android:text="100.00"
+                    android:textSize="25dp"/>
+
+                <TextView
+                    android:id="@+id/det_time"
+                    app:layout_widthPercent="50%"
+                    app:layout_heightPercent="55%"
+                    android:layout_gravity="right|bottom"
+                    android:gravity="center_horizontal"
+                    android:text="6"
+                    android:textSize="25dp"/>
+
+            </android.support.percent.PercentFrameLayout>
+
+
+            <!--第3部分-->
+            <android.support.percent.PercentFrameLayout
+                android:layout_width="match_parent"
+                app:layout_heightPercent="35%"
+                app:layout_marginTopPercent="25%"
+                >
+
+                <android.support.percent.PercentFrameLayout
+                    app:layout_widthPercent="20%"
+                    app:layout_heightPercent="80%"
+                    app:layout_marginLeftPercent="15%"
+                    android:layout_below="@+id/colorChoice"
+                    android:layout_gravity="center_vertical"
+                    android:background="#5066b3ff">
+
+                    <com.gelitenight.waveview.library.WaveView
+                        android:id="@+id/wave_in"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        />
+
+
+
+                    <ImageView
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:background="@drawable/qwe"/>
+
+                    <TextView
+                        android:id="@+id/ww_text"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="bottom"
+                        app:layout_marginBottomPercent="15%"
+                        android:gravity="center"
+                        android:text="100%"
+                        android:textColor="#7b7b7b"
+                        android:textSize="10dp"/>
+
+
+                </android.support.percent.PercentFrameLayout>
+
+                <android.support.percent.PercentFrameLayout
+                    app:layout_widthPercent="60%"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="right">
+
+                    <TextView
+                        android:id="@+id/det_money"
+                        android:layout_width="match_parent"
+                        app:layout_heightPercent="49%"
+                        android:gravity="center_horizontal|bottom"
+                        android:text="200,000.00/1,000,000.00"
+                        android:textSize="17dp"
+                        android:textColor="#ff8000"
+                        />
+
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        app:layout_heightPercent="49%"
+                        android:layout_gravity="bottom"
+                        android:gravity="center_horizontal"
+                        android:text="剩余可投（元）/融资金额（元）"
+                        android:textSize="12dp"
+                        />
+
+                </android.support.percent.PercentFrameLayout>
+
+            </android.support.percent.PercentFrameLayout>
+
+
+            <!--第3部分-->
+            <android.support.percent.PercentFrameLayout
+                android:layout_width="match_parent"
+                app:layout_heightPercent="15%"
+                app:layout_marginTopPercent="60%"
+                android:background="#fff"
+                >
+
+                <TextView
+                    app:layout_widthPercent="40%"
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:text="回款方式"/>
+
+                <TextView
+                    app:layout_widthPercent="60%"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="right"
+                    android:gravity="center"
+                    android:text="每月付息   到期还本"/>
+
+            </android.support.percent.PercentFrameLayout>
+
+
+            <ImageView
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="fragment_details_1"
+                android:layout_gravity="bottom"
+                app:layout_marginBottomPercent="2%"
+                android:src="@drawable/move_1"
+                />
+
+            <ImageView
+                app:layout_widthPercent="8%"
+                app:layout_heightPercent="10%"
+                android:layout_gravity="bottom|center_horizontal"
+
+                app:layout_marginBottomPercent="11%"
+                android:src="@drawable/move_2"
                 />
 
 
